--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -156,7 +156,7 @@
 我们相信 FDM 能力应该是 SLM 的内在能力, 能实现同时听和说.
 
 为了实现交互式语音语言模型 iSLM 的全双工建模 FDM 能力, 我们提出了 ***边听边说语言模型 (Listening-while-Speaking Language Model, LSLM)***, 一种新的具有听说双通道的端到端模型.
-所提出的 ***LSLM*** 使用基于 Token 的仅解码器架构的文本转语音来建模说话能力, 使用流式自监督学习编码器来建模听觉能力.
+所提出的 ***LSLM*** 使用基于 Token 的仅解码器架构的文本转语音来建模说话能力, 使用流式自监督学习编码器来建模听力.
 ***LSLM*** 融合了这两个通道并实时检测轮次转换.
 我们探索了混合双工信号的三种策略: **早期融合 (Early Fusion)**, **中期融合 (Middle Fusion)**, 和 **晚期融合 (Late Fusion)**.
 实验结果表明, 中期融合能够在语音生成和实时交互能力之间取得良好的平衡.
@@ -189,7 +189,7 @@
 
 图 01 展示了从通信角度上单工, 半双工, 全双工语音语言模型之间的区别.
 具有全双工建模能力的 SLM 可以称为交互式语音语言模型 (iSLM).
-A. 单工语音语言模型 (听觉能力);
+A. 单工语音语言模型 (听力);
 B. 单工语音语言模型 (说话能力);
 C. 半双工语音语言模型 (轮流听说能力);
 D. 全双工语音语言模型 (同时听说能力).
@@ -319,17 +319,39 @@ $$
 
 ### LSLM
 
+<details>
+<summary>原文</summary>
+
 > The core difference between ***LSLM*** and previous speech language models lies in its capability to simultaneously speak and listen. 
 > We first introduce the speaking capability of ***LSLM***, followed by its listening capability, and finally, we discuss various fusion methods that integrate these capabilities, endowing ***LSLM*** with full duplex ability. 
 
-#### Speaking Ability
+</details>
+<br>
+
+***LSLM*** 和之前的语音语言模型的核心区别在于它能够同时进行听说.
+我们首先介绍 ***LSLM*** 的说话能力, 然后是听力, 最后讨论各种将这两种能力融合的方法, 使得 ***LSLM*** 拥有全双工能力.
+
+#### Speaking Ability: 说话能力
+
+<details>
+<summary>原文</summary>
 
 > To simulate the speaking ability of the ***LSLM***, we utilize an autoregressive token-based TTS model. 
 > Unlike [VALL-E](2023.01.05_VALL-E.md)-styled models that combine autoregressive (AR) and non-autoregressive (NAR) approaches with multi-layer residual vector quantization (RVQ) tokens, our model employs a single layer of discrete audio tokens. 
 > This design better meets the requirements for real-time interaction, as it eliminates the need to wait for the completion of AR token synthesis before performing NAR operations. 
-> Given target speech $X^R$, an SSL encoder $Enc$ is utilized to obtain a continuous embedding $R$, which can be written as: $R = Enc(X^R).$
+> Given target speech $X^R$, an SSL encoder $Enc$ is utilized to obtain a continuous embedding $R$, which can be written as: 
 
-> To train an autoregressive TTS model based on discrete tokens, we quantize the speech embedding $R$, denoted by: $R^q = Qnt(R)$, where $Qnt$ is the discretization operation and $R^q$ are the discrete tokens. 
+$$
+    R = Enc(X^R).
+$$
+
+> To train an autoregressive TTS model based on discrete tokens, we quantize the speech embedding $R$, denoted by: 
+
+$$
+    R^q = Qnt(R),
+$$
+
+where $Qnt$ is the discretization operation and $R^q$ are the discrete tokens. 
 
 > Given the context information $C$, in this scenario the text content to be synthesized, the model synthesizes the corresponding speech discrete tokens autoregressively.
 > We minimize the negative log-likelihood of the target sequence to train the decoder-only model, conditioned on the preceding tokens and the context.
@@ -357,10 +379,71 @@ $$
 > where $A$ is the acoustic prompt providing the timbre of the synthesized speech. 
 > This decoupling of timbre from content allows the AR model to focus more on semantic information rather than paralinguistic information.
 
-#### Listening Ability
+</details>
+<br>
 
-> Given the audio input $X^S$ of the listening channel, the same SSL encoder $Enc$ in Equation~\ref{eq:ssl_encoder} is used to obtain a continuous embedding $S$, which can be written as: $S = Enc(X^S)$, where $X^S$ can be a variety of sound signals, including environmental noise and human speech.
-> Unlike training the speaking ability, which involves a discretization module, the listening channel embedding $S$ is fed into the neural network end-to-end via a projection module $Proj$, which can be written as: $S^p = Proj(S)$, where the listened audio signal is mapped to a space that can be processed by the AR model. 
+为了模拟 ***LSLM** 的说话能力, 我们使用自回归基于 Token 的文本转语音模型.
+不像 [VALL-E](2023.01.05_VALL-E.md) 类型的模型用多层残差矢量量化 (RVQ) Token 将自回归方法和非自回归方法结合, 我们的模型采用单层的离散音频 Token.
+这一设计更好地满足了实时交互地要求, 因为它消除了在执行非自回归操作前需要等待自回归 Token 合成步骤完成的需要.
+
+1. 给定目标语音 $X^R$, 自监督学习编码器 $Enc$ 用于获得一个连续嵌入 $R$, 可以写为: 
+$$
+    R=Enc(X^R)
+$$
+
+2. 为了基于离散 Token 训练一个自回归文本转语音模型, 我们将语音嵌入 $R$ 进行量化: 
+$$
+    R^q=Qnt(R)
+$$
+其中 $Qnt$ 是离散操作, $R^q$ 是离散 Token.
+
+3. 给定上下文信息 $C$, 在这个场景中是对于需要进行合成的文本内容, 模型自回归地合成对应的语音离散 Token.
+我们最小化目标序列的负对数似然来训练仅解码器架构的模型, 以上下文和先前预测的 Token 为条件.
+损失函数定义如下:
+$$
+    \mathcal{L}(\theta_{S}) = - \sum_{t=1}^{t_{EOS}} \log P(r^q_t|R^q_{1:t-1}, C; \theta_{S}),
+$$
+其中 $\theta_{S}$ 是用于建模说话能力的参数, $t_{EOS}$ 表示到达序列结束 Token 的时间步, $r^q_t$ 是时间步 $t$ 的目标离散 Token, $R^q_{1:t-1}$ 表示到时间步 $t-1$ 的先前所有 Token 的序列, $C$ 是需要合成的文本内容.
+
+4. 在推理时, 模型从基于已经生成的 Token $\hat{R}^q_{1:t-1}$ 和上下文 $C$ 的条件分布中采样 $\hat{r}^q_t$.
+这个过程用方程描述如下:
+$$
+    \hat{r}^q_t\sim P(r^q_t | \hat{R}^q_{1:t-1}, C; \theta_{S}).
+$$
+
+5. 声码器 $Dec$ 用于从离散 Token $\hat{R}^q$ 恢复语音信号 $\hat{X}^R$, 写为: 
+$$
+    \hat{X}^R=Dec(\hat{R}^q, A)
+$$
+其中 $A$ 是提供合成语音音色的声学提示.
+
+这种将音色和内容解耦的方法使得自回归模型能够更专注于语义信息而非副语言信息.
+
+#### Listening Ability: 听力
+
+<details>
+<summary>原文</summary>
+
+> Given the audio input $X^S$ of the listening channel, the same SSL encoder $Enc$ in Equation.04 is used to obtain a continuous embedding $S$, which can be written as: 
+
+$$
+    S = Enc(X^S),
+$$
+
+> where $X^S$ can be a variety of sound signals, including environmental noise and human speech.
+> Unlike training the speaking ability, which involves a discretization module, the listening channel embedding $S$ is fed into the neural network end-to-end via a projection module $Proj$, which can be written as: 
+
+$$
+    S^p = Proj(S),
+$$ 
+
+> where the listened audio signal is mapped to a space that can be processed by the AR model. 
+
+</details>
+<br>
+
+给定说话通道的音频输入 $X^S$, 使用和建模说话能力时第一步相同的自监督学习编码器 $Enc$ 获得一个连续嵌入 $S$, 写为: $S = Enc(X^S)$, 其中 $X^S$ 可以是各种声音信号, 包括环境噪音和人类语音.
+和训练说话能力时涉及到离散模块不同, 听觉通道嵌入 $S$ 通过映射模块 $Proj$ 端到端地输入到神经网络, 写为: $S^p = Proj(S)$, 其中听到的音频信号被映射到可以被自回归模型处理的空间中.
 
 ### FDM Ability
 
