--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -530,16 +530,31 @@ $$
 
 ### Model Details: 模型细节 <a id="model_details"></a>
 
+<details>
+<summary>原文</summary>
+
 > The backbone of the proposed ***LSLM*** employs a decoder-only Transformer architecture consisting of $12$ Transformer blocks, $12$ attention heads, $768$ embedding dimensions, and $3072$ feed-forward layer dimensions, resulting in $106$M parameters. 
 > SSL encoder [VQ-Wav2Vec [02]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) is employed to extract audio features and further convert speech features to discrete tokens. 
 > [VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md), a fully convolutional self-supervised pre-trained model with $20$ layers of 1D convolutional neural networks with $34$M parameters, is naturally suitable for streaming audio feature extraction. 
 > A simple linear layer serves as the projection module to adapt the listening channel features to the AR model. 
 > A GAN-based token-to-waveform vocoder ([UniCATS [12]](../_tmp/UniCATS.md)) is utilized to recover discrete audio tokens to speech waveform. 
 
-### Data Details
+</details>
+<br>
+
+***LSLM*** 的骨干网络是仅解码器的 Transformer 架构, 由 $12$ 个 Transformer 块, $12$ 个注意力头, $768$ 维嵌入维度, 和 $3072$ 维前馈层维度组成, 共计 $106 M$ 参数.
+自监督学习编码器采用 [VQ-Wav2Vec [02]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) 提取音频特征, 并将语音特征转换为离散 Token.
+[VQ-Wav2Vec](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) 是一种自监督预训练模型, 它采用 $20$ 层的一维卷积神经网络, 共计 $34 M$ 参数. 它很自然地适合流式音频特征提取.
+一个简单的线性层充当映射模块, 将听觉通道特征适配到自回归模型.
+一个基于 GAN 的离散 Token 到语音波形的解码器 ([UniCATS [12]](../_tmp/UniCATS.md) 中的 CTX-vec2wav) 用于恢复离散音频 Token 到语音波形.
+
+### Data Details: 数据细节
+
+<details>
+<summary>原文</summary>
 
 > We evaluate the proposed ***LSLM*** under two full duplex modeling (FDM) settings: command-based FDM and voice-based FDM. 
-> Table \ref{tab:data_details} summarizes the datasets and experimental settings. 
+> Table.01 summarizes the datasets and experimental settings. 
 > For the TTS datasets, we utilize the [LibriTTS dataset [47]](../../Datasets/2019.04.05_LibriTTS.md) with $585$ hours of speech-text pairs for training and validation.
 > LibriTTS-testsetB ([UniCATS [12]](../_tmp/UniCATS.md)) is adopted for testing, which contains $500$ utterances sampled from the test-clean subset of LibriTTS with 37 unseen speakers. 
 > Background noise is uniformly sourced from the Freesound portion of the [MUSAN dataset [34]](../../Datasets/2015.10.28_MUSAN.md), which includes high-frequency noise such as telephone ringing and sounds of the explosion, as well as low-frequency noise such as white noise and traffic noise. 
@@ -555,6 +570,25 @@ $$
 > [The Speech Commands Dataset [43]](../../Datasets/SpeechCommands.md) is a set of one-second audio, each containing a single spoken English word.
 > We split the dataset into training, validation, and test sets in an $8:1:1$ ratio, resulting in $51,088$, $6,798$, and $6,835$ pieces of data, respectively.
 > In addition, we use a speaker independence setting, which guarantees that the speakers in the test set do not appear in the training set, simulating more challenging and realistic scenarios. 
+
+</details>
+<br>
+
+我们在两个全双工建模 (FDM) 设置下评估 ***LSLM***: 命令式 FDM 和语音式 FDM.
+
+下方表格总结了数据集和实验设置.
+
+![](Images/2024.08.05_LSLM_Tab.01.png)
+
+对于 TTS 数据集, 使用 [LibriTTS dataset [47]](../../Datasets/2019.04.05_LibriTTS.md) 的 $585$ 小时的语音文本对用于训练和验证.
+使用 [UniCATS [12]](../_tmp/UniCATS.md) 中的 LibriTTS-testsetB 用于测试, 包括了 $500$ 条来自 37 个未见过的说话人的发言, 是 LibriTTS test-clean 的子集.
+背景音从 [MUSAN dataset [34]](../../Datasets/2015.10.28_MUSAN.md) 的 Freesound 部分均匀采样得到, 该数据集包含高频噪声如电话铃声和爆炸声, 低频噪声如白噪声和交通噪声.
+模型需要区分人声和噪声, 以避免和任何随机输入信号进行轮次转换, 避免琐碎的结果.
+基于全双工建模设置构造不同的打断数据:
+- 基于命令的 FDM: ***LSLM*** 只能被特定关键词打断. 使用了 [Seed-TTS [31]](2024.06.04_Seed-TTS.md) 中的 22 个独特说话人的音色来合成命令 `Honey` 用于基于命令的 FDM.
+- 基于声音的 FDM: ***LSLM*** 可以被各种不同词汇打断. [The Speech Commands Dataset [43]](../../Datasets/SpeechCommands.md) 是一个一秒音频的集合, 每个音频包含单个英语单词.
+  我们将数据集划分为训练集, 验证集和测试集, 比例为 $8:1:1$, 分别对应 $51,088$, $6,798$, $6,835$ 条数据.
+  此外, 我们使用说话人独立设置, 确保测试集中的说话人不出现在训练集中, 模拟更具有挑战性和现实性的场景.
 
 ### Training and Inference Details
 
