--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -590,18 +590,36 @@ $$
   我们将数据集划分为训练集, 验证集和测试集, 比例为 $8:1:1$, 分别对应 $51,088$, $6,798$, $6,835$ 条数据.
   此外, 我们使用说话人独立设置, 确保测试集中的说话人不出现在训练集中, 模拟更具有挑战性和现实性的场景.
 
-### Training and Inference Details
+### Training and Inference Details: 训练和推理细节
+
+<details>
+<summary>原文</summary>
 
 > We train the model with TTS, interruption, and noise datasets for $20$ epochs. 
 > For each sample, noise is added with a $50\%$ probability, and interruption with a $50\%$ probability, to the listening tokens. 
-> If a sample is selected to include an interruption, we modify the sentence to output the IRQ token $\mu = 0.5$ seconds after the start of the interruption and then stop outputting the remaining speaking tokens. 
+> If a sample is selected to include an interruption, we modify the sentence to output the `IRQ` token $\mu = 0.5$ seconds after the start of the interruption and then stop outputting the remaining speaking tokens. 
 > This ensures that the model can correctly handle different audio signal combinations in the listening channel. 
 > The optimization strategy involves using [AdamW [23]](../../Modules/Optimization/2017.11.14_AdamW.md) with a max learning rate of $5 \times 10^{-4}$ without weight decay and a batch size of $4$. 
 > The learning rate scheduler involves a warm-up phase for the first $5,000$ steps, followed by a cosine decay of the learning rate. 
 > Validation is performed at the end of each epoch, and the checkpoint with the lowest loss is selected for inference. 
 > The generation process employs Top-P sampling with a top-p value of $0.99$ and a temperature of $1.0$. 
 
+</details>
+<br>
+
+我们使用 TTS, 中断, 噪声数据集对模型训练 20 个 Epochs.
+对于每个样本, 噪声以 50% 的概率, 中断以 50% 的概率, 添加到听觉 Token 中.
+如果一个样本被选中添加中断, 我们修改句子以在中断开始后的 $\mu=0.5$ 秒输出 `IRQ` Token, 然后停止输出剩余的说话 Token.
+这确保模型能够正确处理听觉通道中不同音频信号组合.
+优化策略使用 [AdamW [23]](../../Modules/Optimization/2017.11.14_AdamW.md) 优化器, 最大学习率为 $5\times 10^{-4}$, 无权重衰减, 批大小为 $4$.
+学习率调度器包含一个 5,000 步的预热阶段, 随后是余弦衰减学习率.
+在每个 Epoch 结束时, 对模型进行验证, 然后选择其中损失最小的检查点用于推理.
+生成过程使用 Top-P 值为 $0.99$ 和温度为 $1.0$ 的 Top-P 采样.
+
 ### Evaluation Metrics
+
+<details>
+<summary>原文</summary>
 
 > **TTS capability evaluation.** 
 > We evaluate whether the speech generation capability is affected by the full duplex modeling in the proposed ***LSLM***. 
@@ -614,7 +632,13 @@ $$
 > From these cases, we construct a confusion matrix and calculate the Precision, Recall, and F1 score. 
 > These metrics consider both the success rate of turn-taking (Recall) and the rate of misjudgments (Precision), providing a comprehensive evaluation of the model's interactivity capabilities. 
 
+</details>
+<br>
+
 ## 5.Results: 结果
+
+<details>
+<summary>原文</summary>
 
 > We conduct a series of experiments to evaluate the command-based and voice-based FDM for both TTS capability and interactive capability. 
 > For TTS capability, we use a test set consisting of $500$ utterances, referred to as LibriTTS-testsetB ([UniCATS [12]](../_tmp/UniCATS.md)), without any interruptions in the listening channel.
@@ -627,7 +651,13 @@ $$
 > By comparing the clean scenarios, we assess whether the intrinsic TTS capability is affected.
 > Additionally, integrating noisy external inputs provides a better simulation of real-world scenarios. 
 
+</details>
+<br>
+
 ### Command-based FDM
+
+<details>
+<summary>原文</summary>
 
 > For command-based FDM, we test the three architectures described in Section~\ref{sec:FDM-Ability} to fuse the listening channel and the speaking channel, which are early fusion (***LSLM***$_{EF}$), middle fusion (***LSLM***$_{MF}$), and late fusion (***LSLM***$_{LF}$).
 > The results are shown in Table~\ref{tab:Command-based-FDM}. 
@@ -640,7 +670,13 @@ $$
 > In summary, the middle fusion approach demonstrates superior performance in TTS capability and competitive performance in interactive capability.
 > Therefore, ***LSLM***$_{MF}$ is concluded to be the best-performing model among those tested. 
 
+</details>
+<br>
+
 ### Voice-based FDM
+
+<details>
+<summary>原文</summary>
 
 > We utilized a more diverse set of interruption commands compared to the command-based FDM and involved unseen speakers in the testing procedures.
 > The best configuration from the command-based FDM, the ***LSLM***$_{MF}$ model, was selected to evaluate the voice-based FDM capability.
@@ -649,7 +685,13 @@ $$
 > Comparing the results with the command-based FDM using the ***LSLM***$_{MF}$ model, we find that the voice-based setting faces greater challenges in maintaining high performance, especially under noisy conditions with Precision at $87.69\%$, Recall at $82.77\%$, and an F1 score of $85.15\%$.
 > The diverse set of interruption commands and the involvement of unseen speakers add complexity, resulting in higher error rates. 
 
+</details>
+<br>
+
 ### Visualization
+
+<details>
+<summary>原文</summary>
 
 > To investigate the turn-taking internal mechanism of ***LSLM***, we visualize the probability distribution of IRQ tokens at different time steps during the generation process. 
 > Given that the IRQ token probability distribution varies significantly in order of magnitude across different time steps, we utilize a logarithmic scale for probability to enhance the clarity of the visualization. 
@@ -658,7 +700,13 @@ $$
 > After a very short time, the IRQ token probability begins to increase. 
 > Shortly thereafter, this probability rises to a level where the IRQ token is sampled by the model during generation. 
 
+</details>
+<br>
+
 ### Ablation Study
+
+<details>
+<summary>原文</summary>
 
 > In this section, we conduct an ablation study on ***LSLM*** with middle fusion architecture to evaluate the impact of different training methods on the performance of TTS capability and interactive capability. 
 > The training methods are categorized as training from scratch (\ding{55}), loading the pre-trained model and fixing the parameters (\ding{51}), and loading the pre-trained model and continuing training (\ding{58}).
@@ -670,6 +718,9 @@ $$
 > Some conclusions can also be drawn from these experiments.
 > For example, the SSL encoder of the listening channel performs better when it can be continued training than fixed the parameters.
 > One potential reason is that the SSL encoder has not encountered diverse noise during pre-training, creating a bottleneck for extracting audio with mixed human voice and noise when using fixed pre-trained parameters. 
+
+</details>
+<br>
 
 ## 6.Conclusions: 结论
 
