Update LSLM info

--- a/Models/Speech_LLM/2024.08.05_LSLM.md
+++ b/Models/Speech_LLM/2024.08.05_LSLM.md
@@ -18,26 +18,33 @@
   - [字节跳动](../../Institutions/ByteDance.md)
 - 时间:
   - 预印时间: 2024.08.05 ArXiv v1
-  - 更新笔记: 2024.08.08
+  - 更新笔记: 2024.08.11
 - 发表:
   - 期刊/会议 
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2408.02622)
-  - [DOI]()
-  - [Github]()
+  <!-- - [DOI]() -->
+  <!-- - [Github]() -->
   - [Demo](https://ziyang.tech/LSLM/)
-  <!-- - [Scholar](https://scholar.google.com/scholar?cluster=) -->
+  - [Scholar](https://scholar.google.com/scholar?cluster=10227820571254254402)
 - 标签:
-  - ?
+  - [全双工建模](../../Tags/FullDuplexModel.md)
+  - [语言模型](../../Tags/LanguageModel.md)
+  - [语音合成](../../Tags/SpeechSynthesis.md)
 - 页数: 13
 - 引用: 49
-- 被引: ?
+- 被引: 0
 - 数据:
-  - ? 
+  - [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md) 
+  - [MUSAN](../../Datasets/2015.10.28_MUSAN.md)
+  - [The Speech Commands Dataset](../../Datasets/SpeechCommands.md)
 - 对比:
-  - ?
+  - Vanilla TTS without Listening Channel;
+  - [VQ-Wav2Vec [02]](../Speech_Representaion/2019.10.12_VQ-Wav2Vec.md) + LSLM (Listening + Speaking) + [CTX-vec2wav](../_tmp/UniCATS.md);
+  - Fusion: Early, Middle, Late;
+  - Training: From Scratch, Loading&Fix, Loading&Training;
 - 复现:
-  - ?
+  - 2024.08.06 [sanowl/LSLM](https://github.com/sanowl/LSLM-Listening-while-Speaking-Language-Model)
 
 </details>
 
@@ -445,7 +452,9 @@ $$
 给定说话通道的音频输入 $X^S$, 使用和建模说话能力时第一步相同的自监督学习编码器 $Enc$ 获得一个连续嵌入 $S$, 写为: $S = Enc(X^S)$, 其中 $X^S$ 可以是各种声音信号, 包括环境噪音和人类语音.
 和训练说话能力时涉及到离散模块不同, 听觉通道嵌入 $S$ 通过映射模块 $Proj$ 端到端地输入到神经网络, 写为: $S^p = Proj(S)$, 其中听到的音频信号被映射到可以被自回归模型处理的空间中.
 
-### FDM Ability: 全双工建模能力 <a id="FDM_Ability"></a>
+### FDM Ability: 全双工建模能力 
+
+<a id="FDM_Ability"></a>
 
 <details>
 <summary>原文</summary>
@@ -528,7 +537,9 @@ $$
 
 ## 4.Experiments: 实验
 
-### Model Details: 模型细节 <a id="model_details"></a>
+### Model Details: 模型细节 
+
+<a id="model_details"></a>
 
 <details>
 <summary>原文</summary>
@@ -822,7 +833,7 @@ $$
 <br>
 
 本文通过向**交互式语音语言模型 (interactive Speech Language Model, iSLM)** 中引入**全双工建模 (Full Duplex Modeling, FDM)** 来应对提升实时交互的挑战.
-我们提出了***听说语言模型 (Listen-while-Speaking Language Model, LSLM)***, 一种新的端到端模型, 专门设计用于处理实时轮流发言.
+我们提出了 ***边听边说语言模型 (Listen-while-Speaking Language Model, LSLM)***, 一种新的端到端模型, 专门设计用于处理实时轮流发言.
 ***LSLM*** 集成了一个基于 Token 的仅解码器架构的文本转语音模型用于语音生成, 以及一个流式自监督编码器用于处理音频输入, 使得模型能够同时听和说.
 我们提出了三种融合双工信号的策略: 早期融合, 中期融合, 后期融合.
 在这些策略中, 中期融合表现出了最佳的平衡.
