--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -93,6 +93,41 @@
 
 ## 3.Methodology: 方法
 
+> Figure~\ref{fig:overall} depicts the architecture of the proposed LauraGPT.
+> Section \ref{sec:gpt-backbone} describes the audio encoder, the text tokenizer, and the modified GPT LM for unified audio-and-text modeling. 
+> Section~\ref{sec:audio-tokenizer} elaborates the audio tokenizer.
+> Section~\ref{sec:codec_vocoder} introduces an efficient one-step codec vocoder for converting audio tokens into high-quality raw waveforms.
+> Section~\ref{sec:task-details} describes the multi-task fine-tuning and shows that LauraGPT provides an extensible framework for supporting more complex tasks.
+
+### 3.1.Modified Language Model for Unifying Audio-and-Text Modeling
+
+> For audio inputs, different from other audio-and-text LLMs using discrete tokens to represent audio inputs, we extract the log-compressed Mel spectrogram features and convert them into  \textit{continuous representations} using a Conformer-based audio encoder.
+> Text inputs and outputs are tokenized using the Qwen tokenizer \cite{qwen}, which inherits the tiktoken tokenizer~\citep{tiktoken} and incorporates additional augmentations for commonly used characters and words in different languages.
+> The tokenized input text undergoes embedding matrix transformation to generate dense vectors.
+> The audio representations and text embeddings have the same dimension $D$.
+> The Conformer-based encoder is initialized with weights from a pre-trained ASR model~\citep{gao2023funasr}. 
+> Since batch normalization can lead to endless loop decoding, we replace it with layer normalization in the Conformer-based encoder (details are in Appendix~\ref{sec:normlization}).
+>
+> To achieve audio generation capabilities, the audio outputs are discretized into tokens using an audio tokenizer (Section~\ref{sec:audio-tokenizer}) to obtain \textit{discrete representations} and the softmax output layer is augmented with the audio tokens. 
+> As a result, the weight matrix $\mathbf{W}$ in the output layer is of size $(N+M+L) \times D$ and is utilized to calculate the logits for audio and text tokens at each position, where $N$, $M$, and $L$ denote the vocabulary sizes of text, audio, and task tokens, respectively. Task tokens are used to inform the model which task should be performed. Note that in order to control the sequence length, we perform the low frame rate~(LFR) method~\citep{gao2020san-m} to downsample audio inputs to 60ms and only select the first codec group of the audio outputs.
+>
+> Based on the aforementioned representations, the GPT backbone is trained to model various audio and text tasks by minimizing the cross-entropy loss:
+
+$$
+    \mathcal{L}_{LM}=-\frac{1}{T_v}\sum_{j=1}^{T_v}{
+    \log p_\theta\left(
+    \mathbf{v}_j | \mathbf{u}_{1:T_u}, \mathbf{u}_{task},\mathbf{v}_{1:j-1}
+    \right)
+    }
+$$
+
+> where $\mathbf{u}$ denotes the input embeddings with a sequence length $T_u$ and $\mathbf{v}$ represents the sequence of target tokens with a length $T_v$. 
+> To specify a task, a special task-related token $\mathbf{u}_{task}$ is inserted between the input embeddings and output tokens.
+> Note that only the losses of outputs are taken into account, while losses on inputs and task token embeddings are masked out.
+> After the final output layer, audio tokens are decoded to raw waveforms using a codec vocoder (Section \ref{sec:codec_vocoder}).
+> Since it is challenging to train an LLM from scratch with limited data and computational resources, we use the open-source GPT LLM, Qwen~\citep{qwen}, as the backbone. Qwen is pre-trained on a diverse corpus covering various domains in English and Chinese and supports 8192 context length. Compared with other open-source GPT models with similar model sizes, Qwen models demonstrate impressive competitiveness, achieving better performance on widely used benchmarks, especially on Chinese tasks~\citep{qwen}.
+> Within LauraGPT, all parameters including the Qwen backbone are jointly optimized, except for the codec vocoder, which is trained independently and kept frozen during both training and inference stages of LauraGPT.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
