--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -128,6 +128,55 @@ $$
 > Since it is challenging to train an LLM from scratch with limited data and computational resources, we use the open-source GPT LLM, Qwen~\citep{qwen}, as the backbone. Qwen is pre-trained on a diverse corpus covering various domains in English and Chinese and supports 8192 context length. Compared with other open-source GPT models with similar model sizes, Qwen models demonstrate impressive competitiveness, achieving better performance on widely used benchmarks, especially on Chinese tasks~\citep{qwen}.
 > Within LauraGPT, all parameters including the Qwen backbone are jointly optimized, except for the codec vocoder, which is trained independently and kept frozen during both training and inference stages of LauraGPT.
 
+### 3.2.Audio tokenizer
+
+> For audio generation, we utilize a codec model as the audio tokenizer to extract \textit{discrete} representations.
+> Our codec model shares a similar architecture as EnCodec~\citep{defossez2022highfi}, which comprises convolutional recurrent encoder and decoder~\citep{DBLP:conf/interspeech/TagliasacchiLMR20} and a residual vector quantizer (RVQ)~\citep{vasuki2006review}.
+> We enhance the original EnCodec model with the following modifications:
+> 1) Add reconstruction losses in the magnitude spectrum domain to improve the quality of middle- and high-frequency signals.
+> 2) Stack five strided convolution blocks with strides of $[8, 5, 4, 2, 2]$ to address the challenge of long sequence lengths, resulting in a token rate of 25Hz for each token group. 
+> 3) Use 32 quantizers with structured dropout in the RVQ module, each with vocabulary size 1024. This revision improves speech quality with more quantizers while preserving most information in the shallow quantizers.
+> The encoder and the \textit{first RVQ quantizer} are used as the audio tokenizer, and \textbf{the outputs of the first quantizer are used as the audio tokens}. The choice of the first $N$ RVQ quantizers to use is a tradeoff between performance and sequence length (hence efficiency). The remaining quantizers and the decoder are only used when training the codec model. Details of training and the pre-trained codec model are in ~\cite{du2023funcodec}. 
+
+### 3.3.One-step Codec Vocoder for Audio Generation
+
+> We propose a one-step codec vocoder in LauraGPT to generate waveforms from the audio tokens, which are extracted from the \textit{first} quantizer as described in Section~\ref{sec:audio-tokenizer}. Our vocoder comprises two components: a transformer-based predictor and a codec decoder.
+> The predictor is trained to estimate the summation of codec embeddings from the 32 RVQ quantizers by minimizing the L1 and L2 distances between the predicted embeddings $\hat{\mathbf{E}}$ and their corresponding ground truth $\mathbf{E}$:
+
+$$
+    \mathcal{L}_{pre}=\sum_{t,i}^{T,D_c}{|\mathbf{E}_{t,i}-\hat{\mathbf{E}}_{t,i}|_1 + |\mathbf{E}_{t,i}-\hat{\mathbf{E}}_{t,i}|_2}
+$$
+
+> where $T$ denotes the total number of frames and $D_{c}$ denotes the dimension of the codec embeddings. 
+> After obtaining the estimated embeddings, the decoder of an pre-trained codec model is utilized to reconstruct the raw audio waveforms. 
+
+> \textbf{Alongside the predicted audio tokens from the LLM, text and audio inputs are used as conditions and fed to the predictor}.
+> For zero-shot TTS task, the text inputs serve as a condition as well as the prompt audio features. For SE task, the input noisy speech features are employed as conditions.
+> Such text and audio conditionings allow the model to generate high-quality audio signals by leveraging the diverse information in prompt audios and noisy speeches, which is lacked in the discrete tokens (output from the first quantizer). Therefore, different from existing Text-to-Audio LLMs, \textbf{our approach simplifies the audio generation process to a single feed-forward calculation and overcomes the prediction challenge caused by the multi-modal distribution of codec tokens}.
+
+### 3.4.Multi-task Finetuning
+
+#### Basic Tasks
+
+> We unify modeling of the following \textit{basic tasks} in the single LauraGPT model and use these tasks for multi-task fine-tuning:
+> Automatic Speech Recognition (\textbf{ASR}), Spoken Language Understanding (\textbf{SLU}), Speech-to-Text Translation (\textbf{S2TT}), Speech Emotion Recognition (\textbf{SER}), Automated Audio Captioning (\textbf{AAC}), Speech Enhancement (\textbf{SE}), and Text-to-speech Synthesis (\textbf{TTS}). Task definitions are in Appendix~\ref{sec:task-intro}.
+
+#### Unified Task Expression
+
+> LauraGPT operates based on a unified task expression: \texttt{[input embeddings, task ID, output tokens]}.
+> With the same inputs, the desired outputs can differ across tasks. For instance, ASR and S2TT tasks require different outputs even for the same audio input.
+> Task tokens are included in both input embedding and output weight matrices.
+> The TTS task takes text embeddings as inputs, while the ASR, S2TT, SLU, SE, ACC, and SER tasks take audio encodings as inputs. 
+> The TTS and SE tasks use audio tokens as the target outputs, while the remaining tasks use text tokens as the target outputs.
+
+#### Support More Complex Tasks
+
+> With its modularized design, LauraGPT provides an extensible framework to support complex tasks. By breaking a task into sub-tasks among the basic tasks and cascading the raw inputs and model outputs of sub-tasks, LauraGPT can perform more complex tasks.
+> For example, we demonstrate that LauraGPT is capable of performing the advanced speech-to-speech translation (S2ST) task by combining the S2TT and TTS tasks.
+> Initially, a sequence is constructed to translate the speech content into the target language text using the S2TT task token: \texttt{[audio encoding, <S2TT>]}. 
+> Subsequently, the translated text is combined with the TTS task token to synthesize speech: \texttt{[text embedding, <TTS>]}. 
+> If maintaining the speaker identity is desired, the original inputs and content can be incorporated to perform \textit{personalized TTS}. This can be achieved with an input sequence as \texttt{[ASR recognized text embedding, S2TT translated text embedding, <TTS>, audio token of input speech]}, where \texttt{ASR recognized text embedding} is obtained using the ASR task: \texttt{[audio encoding, <ASR>]}. This approach treats the bilingual text as the complete input and allows the model to generate an output sequence of codec tokens while maintaining the same speaker identity. Audio samples of S2ST can be found on the demo site. More examples of complex tasks are in Appendix~\ref{appendix:more-complex-tasks}.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
